Bug 477884 - De-floated panel loses shadow on plasmashell restart
Summary: De-floated panel loses shadow on plasmashell restart
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 5.90.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-12-02 02:28 UTC by Jin Liu
Modified: 2023-12-06 23:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jin Liu 2023-12-02 02:28:35 UTC
STEPS TO REPRODUCE
1. Set a panel as "floating".
2. Maximize a window, so the panel de-floats.
3. `systemctl restart --user plasma-plasmashell.service`
4. Panel shadow will disappear.
5. Restore the window, so the panel floats.
6. Now the shadow will re-appear.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.90.0
KDE Frameworks Version: 5.246.0
Qt Version: 6.6.1
Kernel Version: 6.6.3-arch1-1 (64-bit)
Graphics Platform: offscreen
Processors: 12 × AMD Ryzen 5 5600H with Radeon Graphics
Memory: 13.5 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Comment 1 Nate Graham 2023-12-05 21:30:34 UTC
Can reproduce!
Comment 2 Bug Janitor Service 2023-12-06 23:06:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3665
Comment 3 Nate Graham 2023-12-06 23:27:23 UTC
Git commit f88c6e3b23c2d060a7c773ed09506edf614fca1c by Nate Graham, on behalf of Niccolò Venerandi.
Committed on 07/12/2023 at 00:27.
Pushed by ngraham into branch 'master'.

Update panel shadows after change in QML values

During startup, QML values might be initially incorrect; when they
change, the shadow isn't updated accordingly. This fixes the issue.

M  +1    -0    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/f88c6e3b23c2d060a7c773ed09506edf614fca1c