Update panel shadows after change in QML values

During startup, QML values might be initially incorrect; when they
change, the shadow isn't updated accordingly. This fixes the issue.

BUG: 477884